feat(java21): add java 21 features examples